<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCD7D0"
    tools:context=".FragmentCharacterStats">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/stats_character_rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#263955"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_character_name" />

    <TextView
        android:id="@+id/stats_character_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#263955"
        android:paddingTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/stats_character_imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_character_rank" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_character_imageView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stats_editText_wounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:linksClickable="false"
                android:text="@string/stats_string_wounds"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stats_editText_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:linksClickable="false"
                android:text="@string/stats_string_range"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stats_editText_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:linksClickable="false"
                android:text="@string/stats_string_damage"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stats_character_wounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stats_character_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stats_character_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/stats_editText_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:linksClickable="false"
                android:text="@string/new_character_speed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stats_editText_defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:linksClickable="false"
                android:text="@string/new_character_defence"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stats_editText_attacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:linksClickable="false"
                android:text="@string/new_character_attacks"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stats_character_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stats_character_defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stats_character_attacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B5B8A"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/stats_button_characters"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:layout_weight="1"
            android:text="@string/button_characters"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/stats_button_edit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:layout_weight="1"
            android:text="@string/button_edit"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>